{
    "name": "Control",
    "maps": [
        {
            "name": "MousePanAndZoom",
            "id": "a36aa756-fe50-45b1-b3ce-fe8b32bde885",
            "actions": [
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "78e37305-585b-4172-8411-7400a5b09a62",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "3ff272c6-a55c-4cc4-a1fe-164e3cb4b4fa",
                    "expectedControlType": "Axis",
                    "processors": "Invert,Normalize(min=-1,max=1)",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9f96657c-e2fe-418c-87fd-8f939564de5b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "463a70d1-9430-424a-8a57-78fb00dcea79",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Sliding",
            "id": "a9144921-8308-4f0c-9e01-832e4c3dacb3",
            "actions": [
                {
                    "name": "MapSliding",
                    "type": "Button",
                    "id": "cf266317-2e63-4284-8e71-2258b878b2f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseAndTouchDelta",
                    "type": "Value",
                    "id": "605233b5-8617-46ad-aeeb-b0ac58eccf08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ff4a1af-f5e9-4e60-9d70-2b345d618b27",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapSliding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eddb68d3-91c0-453f-a8ce-229bbd03b2a7",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapSliding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d787724-bc0f-4840-b2d8-882578462344",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "MouseAndTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ab79fc3-01a7-4814-b377-743909d50cb8",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "MouseAndTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TouchZooming",
            "id": "a64e929a-da2b-42d1-9da9-4e51c07be432",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "6522d522-5aaa-48a4-b539-c2929cd165e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryFinger",
                    "type": "Value",
                    "id": "5d70a965-2f8c-4642-88d7-74f651617649",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryFinger",
                    "type": "Value",
                    "id": "aff66d03-6a7e-49d0-8a51-40b76a062fc4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryContact",
                    "type": "Button",
                    "id": "0db2ba88-8666-4daa-a73b-83c3b672fab1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93a3ae2c-63a2-4079-a0f8-ad67f0675659",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e0705ce-a038-4dd5-b8e0-6dad8f2a184a",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a52c7a5a-70d3-447d-8997-7d75c7fdc324",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFinger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e6c2ad7-d02a-4047-8742-ba641500f413",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}